force-app/main/default/objects/Sanction__c/Sanction__c.object-meta.xml
<CustomObject>
    <description>PacPoint-IC102218 - Created for BREG phase 1</description>
    <label>Sanction</label>
    <nameField>
        <displayFormat>SN-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sanctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>