force-app/main/default/objects/Sanction__c/fields/AGCollection__c.field-meta.xml
<CustomField>
    <fullName>AGCollection__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-AC020321 - Created for BREG Support Year 2 - Created for CMS Migration</description>
    <label>AG/Collection</label>
    <type>Checkbox</type>
</CustomField>