force-app/main/default/objects/Sanction__c/fields/Amount_Still_Due__c.field-meta.xml
<CustomField>
    <fullName>Amount_Still_Due__c</fullName>
    <formula>Total_Amount_Due__c -  Total_Amount_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Still Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>