force-app/main/default/objects/Sanction__c/fields/DayoftheMonthPaymentsareDue__c.field-meta.xml
<CustomField>
    <fullName>DayoftheMonthPaymentsareDue__c</fullName>
    <label>Day of the Month Payments are Due</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>