force-app/main/default/objects/Sanction__c/fields/EntertheAmountofEachPayment__c.field-meta.xml
<CustomField>
    <fullName>EntertheAmountofEachPayment__c</fullName>
    <label>Enter the Amount of Each Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>