force-app/main/default/objects/Sanction__c/fields/EntertheNumberofRemainingPayments__c.field-meta.xml
<CustomField>
    <fullName>EntertheNumberofRemainingPayments__c</fullName>
    <label>Enter the Number of Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>