force-app/main/default/objects/Sanction__c/fields/GeneratePaymentSchedule__c.field-meta.xml
<CustomField>
    <fullName>GeneratePaymentSchedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Payment Schedule</label>
    <type>Checkbox</type>
</CustomField>