force-app/main/default/objects/Sanction__c/fields/NumberofInstallmentPayments__c.field-meta.xml
<CustomField>
    <fullName>NumberofInstallmentPayments__c</fullName>
    <label>Number of Installment Payments</label>
    <summaryFilterItems>
        <field>Sanction_Payment__c.Type__c</field>
        <operation>equals</operation>
        <value>Installment Payment</value>
    </summaryFilterItems>
    <summaryForeignKey>Sanction_Payment__c.Sanction__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>