force-app/main/default/objects/Sanction__c/fields/NumberofPayments__c.field-meta.xml
<CustomField>
    <fullName>NumberofPayments__c</fullName>
    <label>Number of Payments</label>
    <summaryFilterItems>
        <field>Sanction_Payment__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>Sanction_Payment__c.Sanction__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>