force-app/main/default/objects/Sanction__c/fields/Payment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-YH-04252025</description>
    <label>Penalty Payment Plan?</label>
    <type>Checkbox</type>
</CustomField>