force-app/main/default/objects/Sanction__c/fields/Payment_Plan_Actual_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan_Actual_End_Date__c</fullName>
    <description>PacPoint-YH-04252025</description>
    <label>Penalty Payment Plan Actual End Date</label>
    <type>Date</type>
</CustomField>