force-app/main/default/objects/Sanction__c/fields/Payment_Plan_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan_Start_Date__c</fullName>
    <description>PacPoint-YH-04252025</description>
    <label>Penalty Payment Plan Start Date</label>
    <type>Date</type>
</CustomField>