force-app/main/default/objects/Sanction__c/fields/Restitution_Payment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Restitution_Payment_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-YH-04302025</description>
    <label>Restitution Payment Plan?</label>
    <type>Checkbox</type>
</CustomField>