force-app/main/default/objects/Sanction__c/fields/Restitution_Payment_Plan_Planned_EndDate__c.field-meta.xml
<CustomField>
    <fullName>Restitution_Payment_Plan_Planned_EndDate__c</fullName>
    <description>PacPoint-YH-04302025</description>
    <label>Restitution Payment Plan Planned EndDate</label>
    <type>Date</type>
</CustomField>