force-app/main/default/objects/Sanction__c/fields/Restitution_Payment_Plan_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Restitution_Payment_Plan_Start_Date__c</fullName>
    <description>PacPoint-YH-04302025</description>
    <label>Restitution Payment Plan Start Date</label>
    <type>Date</type>
</CustomField>