force-app/main/default/objects/Sanction__c/fields/Sanction__c.field-meta.xml
<CustomField>
    <fullName>Sanction__c</fullName>
    <description>PacPoint-IC102918 - Created for BREG phase 1</description>
    <label>Sanction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Barred/Prohibited from Registering</fullName>
            </value>
            <value>
                <fullName>Registration Conditional</fullName>
            </value>
            <value>
                <fullName>Registration Denied</fullName>
            </value>
            <value>
                <fullName>Restitution/Rescission</fullName>
            </value>
            <value>
                <fullName>Injunction</fullName>
            </value>
            <value>
                <fullName>Penalty</fullName>
            </value>
            <value>
                <fullName>Registration Revocation</fullName>
            </value>
            <value>
                <fullName>Registration Suspension</fullName>
            </value>
            <value>
                <fullName>Registration Withdrawal (Formal/Informal)</fullName>
            </value>
            <value>
                <fullName>Heightened Supervision</fullName>
            </value>
            <value>
                <fullName>Investigative Costs</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>