force-app/main/default/objects/Sanction__c/fields/StartDateoftheNextScheduledPayment__c.field-meta.xml
<CustomField>
    <fullName>StartDateoftheNextScheduledPayment__c</fullName>
    <label>Start Date of the Next Scheduled Payment</label>
    <type>Date</type>
</CustomField>