force-app/main/default/objects/Sanction__c/fields/Suspended_Amount__c.field-meta.xml
<CustomField>
    <fullName>Suspended_Amount__c</fullName>
    <description>PacPoint-YH-110923; case ref 29449</description>
    <label>Suspended Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>