force-app/main/default/objects/Sanction__c/fields/TaxIntercept__c.field-meta.xml
<CustomField>
    <fullName>TaxIntercept__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-AC020321 - Created for BREG Support Year 2 - Created for CMS Migration</description>
    <label>Tax Intercept</label>
    <type>Checkbox</type>
</CustomField>