force-app/main/default/objects/Sanction__c/fields/Total_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Paid__c</fullName>
    <label>Total Amount Paid</label>
    <summarizedField>Sanction_Payment__c.Total_Payments__c</summarizedField>
    <summaryFilterItems>
        <field>Sanction_Payment__c.Status__c</field>
        <operation>equals</operation>
        <value>Received</value>
    </summaryFilterItems>
    <summaryForeignKey>Sanction_Payment__c.Sanction__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>