force-app/main/default/objects/Sanction__c/fields/Total_Sanction_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Sanction_Amount__c</fullName>
    <description>PacPoint-YH-110923 case ref 29449</description>
    <label>Total Sanction Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>