force-app/main/default/objects/Sanction__c/validationRules/Initial_Payment_Completed.validationRule-meta.xml
<ValidationRule>
    <fullName>Initial_Payment_Completed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NumberofPayments__c = 0,
GeneratePaymentSchedule__c = true)</errorConditionFormula>
    <errorMessage>You must first complete initial payment in order to generate payment schedule.  Please click &quot;Cancel&quot; and create at least one initial payment.</errorMessage>
</ValidationRule>