force-app/main/default/objects/Sanction__c/validationRules/Installment_Payments_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Installment_Payments_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 NumberofInstallmentPayments__c &gt; 0,
GeneratePaymentSchedule__c = true,
ISCHANGED(GeneratePaymentSchedule__c) 
)</errorConditionFormula>
    <errorMessage>A payment schedule has already been generated for this Sanction.  If you wish to generate the payment schedule again, you must delete all Payments with a Type of &quot;Installment Payment&quot; first.  Please click &quot;Cancel&quot;.</errorMessage>
</ValidationRule>